src/content/docs/versions/ts-sdk/0.4.x/inputs/v4l2.mdx
---
title: Video for Linux 2 (V4L2 API)
slug: ts-sdk/0.4.x/ts-sdk/inputs/v4l2
---

import { Aside, Badge, Code } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

<Badge text="Node.js" variant="tip" size="large" />

<Badge text="Browser (Client)" variant="tip" size="large" />

<Badge text="Experimental" variant="caution" size="large" />

<br />

<br />

An input type that allows Smelter to capture video using the Video for Linux 2 API. V4L2 devices can be found in
paths that look like this:

* `/dev/video[N]`, where `N` is the device number,
* `/dev/v4l/by-id/[DEVICE ID]`,
* `/dev/v4l/by-path/[PCI/USB PATH]`.

<Aside>
  V4L2 devices support various image formats. The currently supported ones are `YUYV` and `NV12`. You can check
  which image formats are supported by your device by using `v4l2-ctl -d [DEVICE PATH] --list-formats-ext`.
</Aside>

## Usage

<CollapsibleDetails summaryTitle="Example request" open>
  ```tsx title=v4l2InputExample.tsx
  import Smelter from "@swmansion/smelter-node";

  async function run() {
    const smelter = new Smelter();
    await smelter.init();
    await smelter.registerInput("example", {
      type: "v4l2",
      path: "/dev/video0",
      format: "yuyv",
      resolution: {
        width: 1920,
        height: 1080,
      },
      framerate: 30,
    });
  }
  void run();

  ```
</CollapsibleDetails>

## Reference

<CollapsibleDetails summaryTitle="Type definition" open>
  ```tsx
  type RegisterV4l2Input = {
    type: "v4l2";
    path: string;
    format: "yuyv" | "nv12";
    resolution: {
      width: number;
      height: number;
    };
    framerate: number | string;
    required?: boolean;
    sideChannel?: SideChannel;
  };
  ```
</CollapsibleDetails>

Parameters for registering a V4L2 device as an input.

## Properties

### path

Path to the V4L2 device.

* **Type**: `string`

***

### format

A format used for video capture.

* **Type**: `"yuyv" | "nv12"`
* **Supported values**:
  * `yuyv` - YUYV, which is a form of interleaved 4:2:2 YUV.
  * `nv12` - NV12, which is a form of planar 4:2:0 YUV, with one plane for Y and a second plane for interleaved UV.

***

### resolution

The capture resolution. This value may be changed by the device driver to the closest resolution supported at
the selected format.

* **Type**: `{ width: number; height: number; }`

***

### framerate

Video framerate. This value may be changed by the device driver to the closest framerate supported at the
selected format and resolution. Has to be either a u32 or a string in the `"NUM/DEN"` form, representing a
fraction.

* **Type**: `number | string`

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is
delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `bool`
* **Default value**: `false`

***

### sideChannel

Enable [side channel](/ts-sdk/0.4.x/side-channel/overview) publishing for this input. The external
consumer reads decoded frames / audio from a Unix socket created under
`SMELTER_SIDE_CHANNEL_SOCKET_DIR`.

* **Type**: [`SideChannel`](#sidechannel)
* **Option availability**: <Badge text="Node.js" variant="tip" />

## SideChannel

Per-track side channel configuration. See the [Side Channel overview](/ts-sdk/0.4.x/side-channel/overview) for details on how decoded data is exposed and consumed.

<CollapsibleDetails summaryTitle="Type definition" open>
  ```tsx
  type SideChannel = {
    video?: boolean;
    audio?: boolean;
    delayMs?: number;
  };
  ```
</CollapsibleDetails>

### Properties

#### video

Publish decoded RGBA video frames for this input on the side channel.

* **Type**: `boolean`
* **Default value**: `false`

#### audio

Publish decoded PCM audio batches for this input on the side channel.

* **Type**: `boolean`
* **Default value**: `false`

#### delayMs

Side channel delay in milliseconds. Frames are buffered for this duration ahead of when the queue consumes them, so the side-channel subscriber receives them early and has roughly this much time to process before the frame is due.

* **Type**: `number`
* **Default value**: `0`
